--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   },
   "homepage": "https://github.com/Brooklyn-Dev/hollow-bot#readme",
   "dependencies": {
-    "commandkit": "^0.1.10",
+    "commandkit": "^0.1.6",
     "discord.js": "^14.18.0",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
