--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Brooklyn-Dev/hollow-bot#readme",
   "dependencies": {
+    "canvas": "^3.1.0",
     "commandkit": "^0.1.6",
     "discord.js": "^14.18.0",
     "dotenv": "^16.5.0",
